welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:21: error: not found: value T
		setCouleurBrosse(T(k): Color);baisseBrosse();leveBrosse();avance()
                                 ^